--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
 	"main": "./html/index.html",
 	"version": "0.0.2",
 	"window": {
-		"toolbar": false
+		"frame": false,
+		"toolbar": false,
+		"title" : "thermorrent",
+		"min_width": 768,
+		"width": 768,
+		"position" : "mouse"
 	},
 	"dependencies": {
 		"peerflix": "0.5.2",
