--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "thermorrent",
 	"main": "./html/index.html",
 	"version": "0.5.0beta",
+	"repository": "git://github.com/thermatk/thermorrent.git",
 	"window": {
 		"frame": false,
 		"toolbar": false,
@@ -14,16 +15,16 @@
 	},
 	"dependencies": {
 		"peerflix": "^0.8.6",
-		"read-torrent": "^0.2.0",
-		"network-address": "0.0.4",
+		"read-torrent": "^1.2.0",
+		"network-address": "1.0.0",
 		"windows-no-runnable": "~0.0.6",
 		"numeral": "^1.5.3",
-		"request": "2.34.0",
-		"cheerio": "0.15.0",
-		"iconv-lite": "0.2.11"
+		"request": "2.53.0",
+		"cheerio": "0.18.0",
+		"iconv-lite": "0.4.7"
 	},
 	"devDependencies": {
-		"grunt": "0.4.4",
-		"grunt-node-webkit-builder": "0.1.20"
+		"grunt": "0.4.5",
+		"grunt-node-webkit-builder": "1.0.0"
 	}
 }
