--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "thermorrent",
 	"main": "./html/index.html",
-	"version": "0.5.0beta",
+	"version": "0.8",
 	"repository": "git://github.com/thermatk/thermorrent.git",
 	"window": {
 		"frame": false,
