--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "thermorrent",
 	"main": "./html/index.html",
-	"version": "0.8",
+	"version": "0.9.0",
 	"repository": "git://github.com/thermatk/thermorrent.git",
 	"window": {
 		"frame": false,
@@ -14,7 +14,7 @@
 		"position" : "mouse"
 	},
 	"dependencies": {
-		"peerflix": "^0.25.2",
+		"peerflix": "0.29.2",
 		"read-torrent": "^1.2.0",
 		"network-address": "1.0.0",
 		"windows-no-runnable": "~0.0.6",
